--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			content="Explore the portfolio of Hazem Ibn-Abdullah — Unity developer and full-stack web developer passionate about coding, design, and creative technology." />
 
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" href="/src/assets/react.svg" />
+		<link rel="icon" type="image/png" href="react.svg" />
 
 		<!-- Theme Color -->
 		<meta name="theme-color" content="#0f172a" />
