--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 			content="Explore the portfolio of Hazem Ibn-Abdullah — Unity developer and full-stack web developer passionate about coding, design, and creative technology." />
 
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" href="react.svg" />
+		<link rel="icon" type="image/png" href="/my-portfolio/assets/react-CHdo91hT.svg" />
 
 		<!-- Theme Color -->
 		<meta name="theme-color" content="#0f172a" />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://hazem-portfolio.vercel.app/" />
+		<meta
+			property="og:url"
+			content="https://ibn-abdullah.github.io/my-portfolio/" />
 		<meta
 			property="og:title"
 			content="Hazem Ibn-Abdullah | Developer Portfolio" />
@@ -33,13 +35,13 @@
 			content="Portfolio showcasing Unity games, web apps, and creative projects." />
 		<meta
 			property="og:image"
-			content="https://images.unsplash.com/photo-1557804506-669a67965ba0?auto=format&fit=crop&w=1200&q=80" />
+			content="https://scontent.cdninstagram.com/v/t51.82787-15/571108598_18052506929647465_8925582410064706927_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=108&ig_cache_key=Mzc1MjEwMzQxNTUwMjM1MDU5MA%3D%3D.3-ccb1-7&ccb=1-7&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE5MjB4MTA4MC5zZHIuQzMifQ%3D%3D&_nc_ohc=xNF96ly5xvAQ7kNvwFdXHQ4&_nc_oc=Adkj1jaTfHvZdVkrCJImTK7NsvmokK-VjTgtTpfSSVOnf964_v_8FsXa-cdxsmzIoUk&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=U9_89zpEuT4tMEe6gwe_ag&oh=00_AfedVUgdlrW222QhtAAWEAgK_fmesXv8LZ0eBbQyYlAWHw&oe=69043E9D" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta
 			property="twitter:url"
-			content="https://hazem-portfolio.vercel.app/" />
+			content="https://ibn-abdullah.github.io/my-portfolio/" />
 		<meta
 			property="twitter:title"
 			content="Hazem Ibn-Abdullah | Developer Portfolio" />
@@ -48,7 +50,7 @@
 			content="Unity & Web Developer passionate about creative technology and innovation." />
 		<meta
 			property="twitter:image"
-			content="https://images.unsplash.com/photo-1557804506-669a67965ba0?auto=format&fit=crop&w=1200&q=80" />
+			content="https://scontent.cdninstagram.com/v/t51.82787-15/571108598_18052506929647465_8925582410064706927_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=108&ig_cache_key=Mzc1MjEwMzQxNTUwMjM1MDU5MA%3D%3D.3-ccb1-7&ccb=1-7&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE5MjB4MTA4MC5zZHIuQzMifQ%3D%3D&_nc_ohc=xNF96ly5xvAQ7kNvwFdXHQ4&_nc_oc=Adkj1jaTfHvZdVkrCJImTK7NsvmokK-VjTgtTpfSSVOnf964_v_8FsXa-cdxsmzIoUk&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=U9_89zpEuT4tMEe6gwe_ag&oh=00_AfedVUgdlrW222QhtAAWEAgK_fmesXv8LZ0eBbQyYlAWHw&oe=69043E9D" />
 
 		<!-- Fonts (modern, fast) -->
 		<link
